# Retail-Anomaly-Detection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scoring the invoicing data
configs/: default.yaml
data/raw/: README.md
data/synthetic/: README.md
notebooks/: 01_analysis.html  01_analysis.ipynb  lfm.ipynb
reports/: factor_loadings.csv
retail_anomaly/: __init__.py
retail_anomaly.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
retail_anomaly/api/: __init__.py  app.py
retail_anomaly/cvae/: __init__.py  model.py  validation.py
retail_anomaly/features/: lfm.py
retail_anomaly/scorer/: __init__.py  classifier.py  final_model.py  lfm.py
retail_anomaly/semi/: self_training.py
retail_anomaly/utils/: __init__.py  config.py  data_loader.py  validation.py
scripts/: create_analysis_notebook.py  generate_report.py  pipeline.py  train.py
tests/: test_api.py  test_cvae.py  test_lfm.py
